--- a/privacy.html
+++ b/privacy.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  budinvest.prod built the Fun Of Australia app as
+                  budinvest.prod built the Australia Pokies Online Helper app as
                   a Free app. This SERVICE is provided by
                   budinvest.prod at no cost and is intended for use as
                   is.
@@ -25,7 +25,7 @@
                 </p> <p>
                   The terms used in this Privacy Policy have the same meanings
                   as in our Terms and Conditions, which are accessible at
-                  Fun Of Australia unless otherwise defined in this Privacy Policy.
+                  Australia Pokies Online Helper unless otherwise defined in this Privacy Policy.
                 </p> <p><strong>Information Collection and Use</strong></p> <p>
                   For a better experience, while using our Service, we
                   may require you to provide us with certain personally
